fixed more scrollbar stuff

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -7,6 +7,7 @@
   grid-gap: 16px;
   width: 400px;
   height: 530px;
+  display: none !important;
 }
 
 .cards>ul>li {
